--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply my-4 text-3xl font-bold;
+  }
+
+  p {
+    @apply my-4 text-[0.95rem] text-neutral-500;
+  }
+
+  img,
+  svg {
+    @apply aspect-auto max-h-full max-w-full;
+  }
+}
+
+@layer component {
+  .btn-primary {
+    @apply bg-accent-500;
+  }
+}
