--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@
     @apply my-4 text-[0.95rem] text-neutral-500;
   }
 
+  button,
+  a {
+    @apply outline-none outline outline-2 outline-transparent transition-[outline-color] ease-in focus-visible:outline-none focus-visible:outline-accent-500;
+  }
+
   img,
   svg {
     @apply aspect-auto max-h-full max-w-full;
@@ -18,7 +23,7 @@
 }
 
 @layer component {
-  .btn-primary {
-    @apply bg-accent-500;
+  .hover-outline {
+    @apply outline outline-2 outline-transparent transition-[outline-color] ease-in hover:outline-accent-500;
   }
 }
